// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Верстка компонента <Checkbox> Выводится лейбл 1`] = `
<div
  className="sc-bxivhb eHEXwf"
  color="blue"
  disabled={false}
  onClick={[Function]}
>
  <div
    className="sc-bdVaJa gQCSGd"
    disabled={false}
  >
    <div
      className="sc-bwzfXH eXDSiB"
      color="blue"
      disabled={false}
    >
      <svg
        aria-hidden="true"
        className="icon  sc-htpNat dHUGjo"
        focusable="false"
        large={false}
        style={Object {}}
        viewBox="0 0 8 7"
      >
        <path
          d="M2.59 7a.74.74 0 0 1-.5-.2L.21 4.95a.68.68 0 0 1 0-.98.7.7 0 0 1 .99 0l1.39 1.36L6.8 1.2a.7.7 0 0 1 .99 0c.28.27.28.71 0 .98L3.09 6.8a.74.74 0 0 1-.5.2"
        />
      </svg>
    </div>
  </div>
  <div
    className="sc-ifAKCX fRGfKL"
    disabled={false}
  >
    Label
  </div>
</div>
`;

exports[`Верстка компонента <Checkbox> Дефолтная 1`] = `
<div
  className="sc-bxivhb eHEXwf"
  color="blue"
  disabled={false}
  onClick={[Function]}
>
  <div
    className="sc-bdVaJa gQCSGd"
    disabled={false}
  >
    <div
      className="sc-bwzfXH eXDSiB"
      color="blue"
      disabled={false}
    >
      <svg
        aria-hidden="true"
        className="icon  sc-htpNat dHUGjo"
        focusable="false"
        large={false}
        style={Object {}}
        viewBox="0 0 8 7"
      >
        <path
          d="M2.59 7a.74.74 0 0 1-.5-.2L.21 4.95a.68.68 0 0 1 0-.98.7.7 0 0 1 .99 0l1.39 1.36L6.8 1.2a.7.7 0 0 1 .99 0c.28.27.28.71 0 .98L3.09 6.8a.74.74 0 0 1-.5.2"
        />
      </svg>
    </div>
  </div>
  
</div>
`;

exports[`Верстка компонента <Checkbox> Зеленого цвета 1`] = `
<div
  className="sc-bxivhb ioxTto"
  color="green"
  disabled={false}
  onClick={[Function]}
>
  <div
    className="sc-bdVaJa gQCSGd"
    disabled={false}
  >
    <div
      className="sc-bwzfXH liiUKZ"
      color="green"
      disabled={false}
    >
      <svg
        aria-hidden="true"
        className="icon  sc-htpNat dHUGjo"
        focusable="false"
        large={false}
        style={Object {}}
        viewBox="0 0 8 7"
      >
        <path
          d="M2.59 7a.74.74 0 0 1-.5-.2L.21 4.95a.68.68 0 0 1 0-.98.7.7 0 0 1 .99 0l1.39 1.36L6.8 1.2a.7.7 0 0 1 .99 0c.28.27.28.71 0 .98L3.09 6.8a.74.74 0 0 1-.5.2"
        />
      </svg>
    </div>
  </div>
  
</div>
`;

exports[`Верстка компонента <Checkbox> Неактивный 1`] = `
<div
  className="sc-bxivhb fhQFib"
  color="blue"
  disabled={true}
  onClick={[Function]}
>
  <div
    className="sc-bdVaJa dbYBLr"
    disabled={true}
  >
    <div
      className="sc-bwzfXH knrwLq"
      color="blue"
      disabled={true}
    >
      <svg
        aria-hidden="true"
        className="icon  sc-htpNat dHUGjo"
        focusable="false"
        large={false}
        style={Object {}}
        viewBox="0 0 8 7"
      >
        <path
          d="M2.59 7a.74.74 0 0 1-.5-.2L.21 4.95a.68.68 0 0 1 0-.98.7.7 0 0 1 .99 0l1.39 1.36L6.8 1.2a.7.7 0 0 1 .99 0c.28.27.28.71 0 .98L3.09 6.8a.74.74 0 0 1-.5.2"
        />
      </svg>
    </div>
  </div>
  
</div>
`;

exports[`Верстка компонента <Checkbox> Синего цвета 1`] = `
<div
  className="sc-bxivhb eHEXwf"
  color="blue"
  disabled={false}
  onClick={[Function]}
>
  <div
    className="sc-bdVaJa gQCSGd"
    disabled={false}
  >
    <div
      className="sc-bwzfXH eXDSiB"
      color="blue"
      disabled={false}
    >
      <svg
        aria-hidden="true"
        className="icon  sc-htpNat dHUGjo"
        focusable="false"
        large={false}
        style={Object {}}
        viewBox="0 0 8 7"
      >
        <path
          d="M2.59 7a.74.74 0 0 1-.5-.2L.21 4.95a.68.68 0 0 1 0-.98.7.7 0 0 1 .99 0l1.39 1.36L6.8 1.2a.7.7 0 0 1 .99 0c.28.27.28.71 0 .98L3.09 6.8a.74.74 0 0 1-.5.2"
        />
      </svg>
    </div>
  </div>
  
</div>
`;

exports[`Верстка компонента <Checkbox> Ставится галочка 1`] = `
<div
  className="sc-bxivhb eHEXwf"
  color="blue"
  disabled={false}
  onClick={[Function]}
>
  <div
    className="sc-bdVaJa fAfBkV"
    disabled={false}
  >
    <div
      className="sc-bwzfXH hCglrn"
      color="blue"
      disabled={false}
    >
      <svg
        aria-hidden="true"
        className="icon  sc-htpNat dHUGjo"
        focusable="false"
        large={false}
        style={Object {}}
        viewBox="0 0 8 7"
      >
        <path
          d="M2.59 7a.74.74 0 0 1-.5-.2L.21 4.95a.68.68 0 0 1 0-.98.7.7 0 0 1 .99 0l1.39 1.36L6.8 1.2a.7.7 0 0 1 .99 0c.28.27.28.71 0 .98L3.09 6.8a.74.74 0 0 1-.5.2"
        />
      </svg>
    </div>
  </div>
  
</div>
`;

exports[`Верстка компонента <Checkbox> Темносинего цвета 1`] = `
<div
  className="sc-bxivhb fUKjZQ"
  color="deepBlue"
  disabled={false}
  onClick={[Function]}
>
  <div
    className="sc-bdVaJa gQCSGd"
    disabled={false}
  >
    <div
      className="sc-bwzfXH easpOz"
      color="deepBlue"
      disabled={false}
    >
      <svg
        aria-hidden="true"
        className="icon  sc-htpNat dHUGjo"
        focusable="false"
        large={false}
        style={Object {}}
        viewBox="0 0 8 7"
      >
        <path
          d="M2.59 7a.74.74 0 0 1-.5-.2L.21 4.95a.68.68 0 0 1 0-.98.7.7 0 0 1 .99 0l1.39 1.36L6.8 1.2a.7.7 0 0 1 .99 0c.28.27.28.71 0 .98L3.09 6.8a.74.74 0 0 1-.5.2"
        />
      </svg>
    </div>
  </div>
  
</div>
`;

exports[`Верстка компонента <Checkbox> Увеличенный 1`] = `
<div
  className="sc-bxivhb eHEXwf"
  color="blue"
  disabled={false}
  onClick={[Function]}
>
  <div
    className="sc-bdVaJa jEnBfV"
    disabled={false}
  >
    <div
      className="sc-bwzfXH eXDSiB"
      color="blue"
      disabled={false}
    >
      <svg
        aria-hidden="true"
        className="icon  sc-htpNat fhuWIj"
        focusable="false"
        large={true}
        style={Object {}}
        viewBox="0 0 8 7"
      >
        <path
          d="M2.59 7a.74.74 0 0 1-.5-.2L.21 4.95a.68.68 0 0 1 0-.98.7.7 0 0 1 .99 0l1.39 1.36L6.8 1.2a.7.7 0 0 1 .99 0c.28.27.28.71 0 .98L3.09 6.8a.74.74 0 0 1-.5.2"
        />
      </svg>
    </div>
  </div>
  
</div>
`;
